--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,23 @@ jobs:
       - name: Get latest code
         uses: actions/checkout@v4
 
-      - name: Install, build, and upload your site output
-        uses: radenpioneer/astro-ftp-deploy@v0.1.0
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Astro
+        run: npm run build
+
+      - name: Deploy via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          directory: /
-          path: .
+          server-dir: /
+          local-dir: ./dist/
+          protocol: ftps
